# dptp-client-sdk

./: .gitignore  Cargo.toml  readme.md  rust-analyzer.toml
core/: Cargo.toml
core/abi/: reward_tracker.json  vault.json  vester.json 
core/conf/: arb_42161.toml  arb_421613.toml  bsc_97.toml
core/src/: config.rs  lib.rs  log.rs  utils.rs
core/src/contracts/: global_fetch.rs  mod.rs  multicall.rs  token.rs  types.rs  vault.rs  vault_logic.rs
flutter/: README.md  build_rust.sh  pubspec.yaml
flutter/example/: .gitignore  pubspec.yaml
flutter/example/ios/Runner/: bridge_generated.h
flutter/example/ios/Runner.xcodeproj/: project.pbxproj
flutter/example/lib/: main.dart
flutter/lib/: bridge_generated.dart  dptp_client_sdk.dart  dptp_client_sdk_ffi.dart
flutter/lib/ios/: bridge_generated.h
flutter/lib/ios/dptp_sdk.xcodeproj/: project.pbxproj
flutter/rust/: Cargo.toml
flutter/rust/src/: api.rs  bridge_generated.rs
wasm/: Cargo.toml  auto_increase_version_and_publish.sh  auto_increase_version_and_publish_nodejs.sh
wasm/src/: lib.rs  utils.rs
wasm/src/tests/: lib_test.rs
