[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
ethers = {version = "1.0.2"}
async-trait = "0.1.50"
tokio = { version = "1.12.0", features = ["full"] }
ethabi = "18.0.0"
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
anyhow = "1.0.70"
