[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
ethers = {version = "2.0.2" }
async-trait = "0.1.50"
tokio = { version = "1.27.0", features = ["macros", "sync"] }
ethabi = "18.0.0"
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
anyhow = "1.0.70"
paste = "1.0.12"
bigdecimal = "0.3.0"
lazy_static = "1.4.0"
async-std = { version = "1.10.0", features = ["attributes"] }
futures = "0.3"
wasm-bindgen = "0.2.78"
tiny-keccak = "2.0.2"

