[package]
name = "futurx_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
wasm-bindgen = "0.2.63"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
anyhow = "1.0.70"
serde-wasm-bindgen = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

