[package]
name = "futurx_sdk"
version = "0.3.140"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
wasm-bindgen = "0.2.63"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
anyhow = "1.0.70"
serde-wasm-bindgen = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = "0.1.7"
ethabi = "18.0.0"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["macros", "sync"] }
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
web-sys = "0.3.61"
log = "0.4.6"
wasm-logger = "0.2.0"
ethers = {version = "2.0.2" }
ethaddr = "0.1.2"
rand = "0.8.5"




[lib]
crate-type = ["cdylib", "rlib"]


[dev-dependencies]
wasm-bindgen-test = "0.3.34"
